Tabsheet paging buttons added. Disabled buttons no longer appear to be "pushable". Fixes #2945 and #2999.
svn changeset:7993 branch:6.0

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -1256,6 +1256,9 @@
 	text-align: right;
 	margin-top: -1em;
 }
+.v-ff2 .v-tabsheet-scroller {
+	position: relative;
+}
 .v-tabsheet-scrollerPrev,
 .v-tabsheet-scrollerNext,
 .v-tabsheet-scrollerPrev-disabled,
