--- a/WebContent/VAADIN/themes/base/tabsheet/tabsheet.css
+++ b/WebContent/VAADIN/themes/base/tabsheet/tabsheet.css
@@ -36,6 +36,9 @@
 	text-align: right;
 	margin-top: -1em;
 }
+.v-ff2 .v-tabsheet-scroller {
+	position: relative;
+}
 .v-tabsheet-scrollerPrev,
 .v-tabsheet-scrollerNext,
 .v-tabsheet-scrollerPrev-disabled,
