--- a/WebContent/VAADIN/themes/reindeer/progressindicator/progressindicator.css
+++ b/WebContent/VAADIN/themes/reindeer/progressindicator/progressindicator.css
@@ -2,18 +2,12 @@
 	background: #dfe2e4 url(img/base.gif) repeat-x 0 1px;
 }
 .v-progressindicator-wrapper {
-	border: 1px solid #b6bbbc;
+	border: 1px solid #bfbfbf;
 }
 .v-progressindicator-disabled {
 	background: #dfe2e4 url(img/disabled.gif);
-	border: 1px solid #b6bbbc;
+	border: 1px solid #bfbfbf;
 }
 .v-progressindicator-indicator {
 	background: #f7f9f9 url(img/progress.png);
-}
-.v-progressindicator-indeterminate {
-	background: #fff url(../../base/common/img/ajax-loader-medium.gif) no-repeat 50%;
-}
-.v-progressindicator-indeterminate-disabled {
-	background: #dfe2e4;
 }
