Small fix to Reindeer theme black styles.
svn changeset:8000 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/common/common.css
+++ b/WebContent/VAADIN/themes/reindeer/common/common.css
@@ -54,6 +54,7 @@
 /* Fonts on black background */
 .v-app .black,
 .v-window-black,
+.v-window .black,
 .v-popupview-popup .black {
 	color: #c9ccce;
 	text-shadow: #000 0 0 1px;
