--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -2213,6 +2213,7 @@ div > .v-button.v-button-link.v-disabled .v-button-caption,
 /* Fonts on black background */
 .v-app .black,
 .v-window-black,
+.v-window .black,
 .v-popupview-popup .black {
 	color: #c9ccce;
 	text-shadow: #000 0 0 1px;
